# work

./: .gitignore  .work.toml  CLAUDE.md  README.md  pyproject.toml  work
.github/workflows/: ci.yml
docs/plans/: 2026-01-18-context-management-design.md  2026-01-18-context-management-implementation.md  2026-01-18-superpowers-integration-design.md  2026-01-18-visibility-and-notifications-design.md
hooks/: install-hooks.sh  test-session-end-hook.sh  test-stop-hook.sh  work-review-guard.sh  work-session-end.sh  work-stage-detector.sh  work-stop-failure.sh  work-stop.sh  work-worktree-create.sh  work-worktree-remove.sh
scripts/: work-statusline.sh
skills/rollover/: skill.md
skills/trim/: skill.md
skills/work/: SKILL.md
tests/: conftest.py  test_config.py  test_context.py  test_db.py  test_hooks.py  test_parsing.py  test_prompt.py
